cafe-app/cafe-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cafe-ingress
  #annotations:
    #appprotect.f5.com/app-protect-policy: "default/ap-def"
    #appprotect.f5.com/app-protect-enable: "True"
    #appprotect.f5.com/app-protect-security-log-enable: "True"
    #appprotect.f5.com/app-protect-security-log: "default/logconf"
    #appprotect.f5.com/app-protect-security-log-destination: "syslog:server=syslog-svc.default:514"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - cafe.zitechlab.my.id
    secretName: cafe-letsencript-secret-rw6cw
  rules:
  - host: cafe.zitechlab.my.id
    http:
      paths:
      - path: /tea
        pathType: Prefix
        backend:
          service:
            name: tea-svc
            port:
              number: 80
      - path: /coffee
        pathType: Prefix
        backend:
          service:
            name: coffee-svc
            port:
              number: 80
